<resources>
    <string name="app_name">AndroidToolBox Kelly B.</string> //à personnaliser kelly B.
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="state_fragment_onCreate">"Etat actuel du fragment : onCreateView"</string>
    <string name="state_fragment_onResume">"Etat actuel du fragment : onResume"</string>
    <string name="state_fragment_onStart">"Etat actuel du fragment : onStart"</string>
    <string name="message_text_fragment">"TextView clicked."</string>
    <string name="fragment_onCreate">"Fragment onCreate"</string>
    <string name="fragment_onPause">"Fragment onPause"</string>
    <string name="fragment_onAttach">"Fragment onAttach"</string>
    <string name="fragment_onDestroy">"Fragment onDestroy"</string>
    <string name="fragment_onDetach">"Fragment onDetach"</string>
    <string name="fragment_onResume">"Fragment onResume"</string>
    <string name="fragment_onStart">"Fragment onStart"</string>
    <string name="fragment_onStop">"Fragment onStop"</string>
    <string name="string_tag2">"activity_fragment"</string>
    <string name="ident_texte">"Identifiant"</string>
    <string name="title_co_texte">"CONNEXION"</string>
    <string name="texte_valider">"Valider"</string>
    <string name="texte_mdp">"Mot de passe"</string>
    <string name="texte_date">"Date:"</string>
    <string name="texte_nom">"Nom"</string>
    <string name="texte_prenom">"Prénom"</string>
    <string name="date_non_select">"../../.."</string>
    <string name="save_texte">"Sauvegarde"</string>
    <string name="read_texte">"Lecture"</string>
    <string name="info_texte">"Informations"</string>
    <string name="info_save">"Sauvegarde des informations de l'utilisateur"</string>
    <string name="texte_fragment_button">"Charger un fragment de texte"</string>
    <string name="texte_test">"Test"</string>
    <string name="desc_disconnect">"Bouton de déconnexion"</string>
    <string name="desc_bouton_cycle">"Bouton de cycle de vie"</string>
    <string name="desc_bouton_web">"Bouton de WebServices"</string>
    <string name="desc_bouton_permission">"Bouton de permissions"</string>
    <string name="texte_web">"Webservices"</string>
    <string name="texte_cycle">"Cycle de vie"</string>
    <string name="desc_logo">"Image Isen logo"</string>
    <string name="bonjour">"Bonjour"</string>
    <string name="texte_permissions">"Permissions"</string>
    <string name="exemple_fragment"> "Exemple de Fragment de texte : cliquez ici !"</string>
    <string name="texte_fragment">"Mon fragment"</string>
    <string name="permission_localisation_refused">"Permission de localisation refusée par l'utilisateur"</string>
    <string name="permission_contacts_refused">"Permission d'accéder aux contacts refusée par l'utilisateur"</string>
    <string name="permission_camera_refused">"Permission d'accéder à la caméra refusée par l'utilisateur"</string>
    <string name="image_saved">"Image Saved!"</string>
    <string name="gallery">"Selectionner depuis la galerie"</string>
    <string name="take_photo">"Prendre une photo"</string>
    <string name="choose_action">"Choisir une action :"</string>
    <string name="image">"Image"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="message_gps">"Your GPS seems to be disabled, do you want to enable it?"</string>
    <string name="text_latitude"> "Latitude : "</string>
    <string name="text_longitude">"Longitude : "</string>
    <string name="titre_infos_android">"Accès aux informations Android"</string>
    <string name="text_camera">"camera"</string>
    <string name="text_act_onCreate">"Etat actuel de l'activité : Owner onCreate"</string>
    <string name="text_act_onStart">"Etat actuel de l'activité : Owner onStart"</string>
    <string name="text_act_onResume">"Etat actuel de l'activité : Owner onResume"</string>
    <string name="text_act_destroy">"Destroy !"</string>
    <string name="text_aucune_info">"Aucune information fournie"</string>
    <string name="text_error">"That didn't work!"</string>


    Etat actuel de l'activité : Owner onResume
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
