<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StorageActivity">

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texte_date"
        android:textSize="@dimen/activity_storage_textView_datetitle_size"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_datetitle_Horizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_datetitle_constraintVertical_bias" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="@dimen/activity_storage_textView_lastname_width"
        android:layout_height="@dimen/activity_storage_textView_lastname_height"
        android:hint="@string/texte_nom"
        android:textColorHint="#52afaa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_lastname_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_lastname_constraintVertical_bias" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="@dimen/activity_storage_textView_firstname_width"
        android:layout_height="@dimen/activity_storage_textView_firstname_height"
        android:hint="@string/texte_prenom"
        android:textColorHint="#52afaa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_firstname_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_firstname_constraintVertical_bias" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_storage_textView_date_margin"
        android:text="@string/date_non_select"
        android:textSize="@dimen/activity_storage_textView_date_size"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_date_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_date_constraintVertical_bias" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_storage_button_save_margin_start"
        android:layout_marginTop="@dimen/activity_storage_button_save_margin_top"
        android:layout_marginEnd="@dimen/activity_storage_button_save_margin_end"
        android:layout_marginBottom="@dimen/activity_storage_button_save_margin_bottom"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_storage_button_padding"
        android:text="@string/save_texte"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_storage_button_read_margin_start"
        android:layout_marginTop="@dimen/activity_storage_button_read_margin_top"
        android:layout_marginEnd="@dimen/activity_storage_button_read_margin_end"
        android:layout_marginBottom="@dimen/activity_storage_button_read_margin_bottom"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_storage_button_padding"
        android:text="@string/read_texte"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_button_read_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/activity_storage_button_read_constraintVertical_bias" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_storage_textView_title_margin_start"
        android:layout_marginTop="@dimen/activity_storage_textView_title_margin_top"
        android:layout_marginEnd="@dimen/activity_storage_textView_title_margin_end"
        android:layout_marginBottom="@dimen/activity_storage_textView_title_margin_bottom"
        android:text="@string/info_texte"
        android:textSize="@dimen/activity_storage_textView_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/activity_storage_textView_title_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/activity_storage_textView_title_constraintVertical_bias" />

</androidx.constraintlayout.widget.ConstraintLayout>